--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <section>
                 <button id="apaga-tudo" type="reset" value=""></button>
                 <button id="remover-finalizados" type="reset" value=""></button>
+                <button id="salvar-tarefas" type="reset" value="">Salvar</button>
+                <button id="remover-selecionado" type="reset" value="">Remove Item</button>
             </section>
     </main>
     <script src="script.js"></script>
